force-app/main/default/objects/Store__c/fields/Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Code__c</fullName>
    <label>Market Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>