force-app/main/default/objects/Store__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <label>Store Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>