force-app/main/default/objects/Store__c/fields/Zone2__c.field-meta.xml
<CustomField>
    <fullName>Zone2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone2</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>