force-app/main/default/objects/Store__c/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <label>Zone Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>