force-app/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Market_Code__c</columns>
    <columns>Store_Number__c</columns>
    <columns>NAME</columns>
    <columns>Zone2__c</columns>
    <columns>Zone_Code__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>